Todoの枠組み作成

--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,9 @@
 
     <!-- Color the status bar on mobile devices -->
     <meta name="theme-color" content="#2F3BA2">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="/lib/mdl/material.min.css">
+    <script defer src="/lib/mdl/material.min.js"></script>
 
     <!-- SEO: If your mobile URL is different from the desktop URL, add a canonical link to the desktop page https://developers.google.com/webmasters/smartphone-sites/feature-phones -->
     <!--
@@ -39,8 +42,8 @@
 </head>
 
 <body>
-    <!-- Add your site or app content here -->
-
+    <div id="contents"></div>
+    <script defer src="/scripts/main.js" type="text/javascript" charset="utf-8"></script>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
         (function(i, s, o, g, r, a, m)
