--- a/app/index.html
+++ b/app/index.html
@@ -29,11 +29,23 @@
     <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
     <meta name="msapplication-TileColor" content="#2F3BA2">
 
-    <!-- Color the status bar on mobile devices -->
-    <meta name="theme-color" content="#2F3BA2">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="/lib/mdl/material.min.css">
-    <script defer src="/lib/mdl/material.min.js"></script>
+    <!-- Material Design fonts -->
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/icon?family=Material+Icons">
+
+    <!-- Bootstrap -->
+    <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/lib/mdl-bootstrap/css/bootstrap-material-design.css">
+    <link rel="stylesheet" href="/lib/mdl-bootstrap/css/ripples.css">
+    <script src="https://code.jquery.com/jquery-2.2.1.js" integrity="sha256-eNcUzO3jsv0XlJLveFEkbB8bA7/CroNpNVk3XpmnwHc=" crossorigin="anonymous"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script defer src="/lib/mdl-bootstrap/js/material.min.js"></script>
+    <script defer src="/lib/mdl-bootstrap/js/ripples.min.js"></script>
+    <script type="text/javascript">
+        $(function() {
+            $.material.init();
+        });
+    </script>
 
     <!-- SEO: If your mobile URL is different from the desktop URL, add a canonical link to the desktop page https://developers.google.com/webmasters/smartphone-sites/feature-phones -->
     <!--
@@ -42,15 +54,13 @@
 </head>
 
 <body>
-    <div id="contents"></div>
+    <div id="contents" class="container"></div>
     <script defer src="/scripts/main.js" type="text/javascript" charset="utf-8"></script>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
-        (function(i, s, o, g, r, a, m)
-        {
+        (function(i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function()
-            {
+            i[r] = i[r] || function() {
                 (i[r].q = i[r].q || []).push(arguments)
             }, i[r].l = 1 * new Date();
             a = s.createElement(o),
