TodoList一旦実装終了

--- a/app/index.html
+++ b/app/index.html
@@ -42,8 +42,8 @@
     <script defer src="/lib/mdl-bootstrap/js/material.min.js"></script>
     <script defer src="/lib/mdl-bootstrap/js/ripples.min.js"></script>
     <script type="text/javascript">
-        $(function() {
-            $.material.init();
+        jQuery(function() {
+            jQuery.material.init();
         });
     </script>
 
